2005-09-25  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/quit-dialog.c (quit_close_all_dialog_new): another
	patch from Sylvain Foret that fixes the dialog title for the close
	all dialog. Fixes bug #317137. Also pass the right help IDs to
	gimp_message_dialog_new().

2005-09-24  DindinX  <dindinx@gimp.org>

	* libgimpwidgets/gimpwidgetsenums.h: remove the GIMP_ZOOM_LABEL value
	from GimpZoomWidgetType.

	* libgimpwidgets/gimpwidgetsenums.c: regenerated.

	* libgimp/gimpzoompreview.c: provides two read only properties,
	"fraction" and "percentage" to be used with prop widgets.

	* libgimpwidgets/gimpzoommodel.c: use a gimp_prop_label to show the
	zoom fraction.

2005-09-24  Michael Natterer  <mitch@gimp.org>

	* app/actions/file-actions.c: set "Close all" insensitive when
	there are no displays.

2005-09-24  Michael Natterer  <mitch@gimp.org>

	* app/actions/view-actions.c
	* app/actions/view-commands.[ch]: de-uglify callback names for
	"new" and "close".

2005-09-24  Michael Natterer  <mitch@gimp.org>

	Applied (slightly modified) patch from Sylvain Foret which adds
	"Close All" menu entries and dialog. Fixes bug #163532.

	* app/actions/file-actions.c
	* app/actions/file-commands.[ch]: added "file-close-all" action
	and callback.

	* app/dialogs/dialogs-constructors.[ch]
	* app/dialogs/dialogs.c
	* app/dialogs/quit-dialog.[ch]: added close all dialog which is a
	modified quit dialog.

	* app/widgets/gimphelp-ids.h: added help ID.

	* menus/image-menu.xml.in
	* menus/toolbox-menu.xml.in: add close all next to quit.

2005-09-24  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_dialog): set "activates-default" on all
	spinbuttons.

2005-09-24  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/compose.c: fixed some brokenness caused by my
	last "cleanup". Should work as before now.

	* plug-ins/common/decompose.c: cleaned up GUI and code.

2005-09-24  DindinX  <dindinx@gimp.org>
