@@ -39,3 +39,4 @@ gimp_resolution_entry_get_type
 gimp_scrolled_preview_get_type
 gimp_size_entry_get_type
 gimp_unit_menu_get_type
+gimp_zoom_model_get_type
