@@ -1,7 +1,14 @@
+2005-09-25  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/libgimpwidgets.types
+	* libgimpwidgets/tmpl/gimpzoommodel.sgml: added API docs for
+	GimpZoomModel.
+
 2005-09-24  DindinX  <dindinx@gimp.org>
 
-	* app/app-sections.txt: removed	gimp_display_shell_scale_zoom_step and
-	gimp_display_shell_scale_get_fraction.
+	* app/app-sections.txt: removed gimp_display_shell_scale_zoom_step
+	and gimp_display_shell_scale_get_fraction.
 
 2005-09-20  Sven Neumann  <sven@gimp.org>
 
